--- a/server/views/pages/topic-landing-page.njk
+++ b/server/views/pages/topic-landing-page.njk
@@ -156,6 +156,18 @@
 							</li>
 						</ul>
 
+						<h2>News &amp; blogs</h2>
+
+						<h3 class="h4">Latest news on this topic</h3>
+
+						{{ card({ heading: { text: "NICE final draft guidance recommends gene therapy for rare ‘bubble baby syndrome’" }, modifier: "flush", href: "https://www.nice.org.uk/news/article/nice-approves-gene-therapy-for-rare-bubble-baby-syndrome", image: { source: "https://www.nice.org.uk/Media/Default/_Profiles/9d48f06b/fc168ad0/DNA%20-%20200x200-1.jpg?v=636443424909234740", alt: "DNA moleclule spiral" }, summary: "Strimvelis, a treatment for an ultra-rare inherited immune deficiency condition that has been dubbed ‘bubble baby syndrome’ has been approved by NICE in final draft guidance.", metadata: [ { key: "Published", value: "03 January 2018", datetime: "2018-01-03" } ] }) }}
+
+						<h3 class="h4">
+							Latest blogs on this topic
+						</h3>
+
+						{{ card({ heading: { text: "Support people to make decisions if they have capacity but find it difficult, NICE says" }, modifier: "flush", href: "https://www.nice.org.uk/news/article/nice-approves-gene-therapy-for-rare-bubble-baby-syndrome", image: { source: "https://www.nice.org.uk/Media/Default/_Profiles/9d48f06b/b8bb6725/couple%20making%20decision%20-%20200x200.jpg?v=636493615990150776" }, summary: "Health and social care professionals should support people to make decisions who find it difficult, NICE says in new draft guidance.", metadata: [ { key: "Published", value: "20 December 2017", datetime: "2017-12-20" } ] }) }}
+
 					</div>
 				</div>
 
