--- a/server/views/pages/topic-landing-page.njk
+++ b/server/views/pages/topic-landing-page.njk
@@ -166,7 +166,7 @@
 							Latest blogs on this topic
 						</h3>
 
-						{{ card({ heading: { text: "Support people to make decisions if they have capacity but find it difficult, NICE says" }, modifier: "flush", href: "https://www.nice.org.uk/news/article/nice-approves-gene-therapy-for-rare-bubble-baby-syndrome", image: { source: "https://www.nice.org.uk/Media/Default/_Profiles/9d48f06b/b8bb6725/couple%20making%20decision%20-%20200x200.jpg?v=636493615990150776" }, summary: "Health and social care professionals should support people to make decisions who find it difficult, NICE says in new draft guidance.", metadata: [ { key: "Published", value: "20 December 2017", datetime: "2017-12-20" } ] }) }}
+						{{ card({ heading: { text: "Support people to make decisions if they have capacity but find it difficult, NICE says" }, modifier: "flush", author: "Jane Viner, chief nurse at Torbay and South Devon NHS Foundation Trust and NICE fellow", href: "https://www.nice.org.uk/news/article/nice-approves-gene-therapy-for-rare-bubble-baby-syndrome", image: { source: "https://www.nice.org.uk/Media/Default/_Profiles/9d48f06b/b8bb6725/couple%20making%20decision%20-%20200x200.jpg?v=636493615990150776" }, summary: "Health and social care professionals should support people to make decisions who find it difficult, NICE says in new draft guidance.", metadata: [ { key: "Published", value: "20 December 2017", datetime: "2017-12-20" } ] }) }}
 
 					</div>
 				</div>
