GW-38 Move author to metadata
Move card metadata into the list of metadata as this is semantically correct, rather
than just being a div within the article

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -63,6 +63,11 @@
     @include font-size(-1);
     color: $colour-nice-dark-grey;
     margin: rem(0 0 $spacing-x-small 0);
+
+    dd {
+      display: block;
+      margin: 0;
+    }
   }
 
   &__summary {
