GW-88 Allow tags to be links

--- a/server/views/components/tag.njk
+++ b/server/views/components/tag.njk
@@ -22,6 +22,8 @@
 			<li>Impact alpha {{ tag({ label: "Alpha", modifiers: ["impact", "alpha"] }) }}</li>
 			<li>Flush {{ tag({ label: "Flush (no margin)", modifier: "flush" }) }}</li>
 			<li><span class="h2">Super {{ tag({ label: "Super", modifier: "super" }) }}</span></li>
+			<li>{{ tag({ label: "Link", href: "#news" }) }}</li>
+			<li>{{ tag({ label: "Link (modifier)", modifier: "new", href: "#news" }) }}</li>
 		</ul>
 
 		<h2>Tag on a heading {{ tag({ label: "Live", modifiers: ["live", "super"] }) }}</h2>
