GW-106 Add initial styling for filters

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -3,6 +3,7 @@
 'buttons/buttons',
 'card/card',
 'container/container',
+'filter/filter',
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
