--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -3,7 +3,7 @@
 'buttons/buttons',
 'card/card',
 'container/container',
-'filter/filter',
+'filter-group/filter-group',
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
