GW-106 Add filter panel styling

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -4,6 +4,7 @@
 'card/card',
 'container/container',
 'filter-group/filter-group',
+'filter-panel/filter-panel',
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
