--- a/server/views/components/filters.njk
+++ b/server/views/components/filters.njk
@@ -1,16 +1,18 @@
 {% extends "layouts/_layout.njk" %}
-{% set title = "Filter group" %}
+{% set title = "Filters" %}
 {% from "filter-group/filter-group.njk" import filterGroup %}
+{% from "filter-panel/filter-panel.njk" import filterPanel %}
 
 {% block body %}
 
 	<div class="container">
-		<h1>Filter group</h1>
+		<h1>Filters</h1>
 
-		<h2>Set of checkboxes</h2>
+		<h2>Checkbox group in a filter panel</h2>
 
 		<div class="grid">
-			<div data-g="12 md:4 lg:3">
+			<div data-g="12 sm:5 md:4 lg:3">
+
 				{% set filterGroupContent = {
 						title: "Document type",
 						id: "document",
@@ -23,9 +25,22 @@
 						]
 					} %}
 
-				{{ filterGroup(filterGroupContent) }}
+				{% set filterPanelBody %}
+					{{ filterGroup(filterGroupContent) }}
+				{% endset %}
+				
+				
+				{% set filterPanelContent = {
+						title: "Filter",
+						body: filterPanelBody,
+						isExpanded: true
+					} %}
+
+				{{ filterPanel(filterPanelContent) }}
+
 			</div>
-			<div data-g="12 md:8 lg:9">
+			<div data-g="12 sm:7 md:8 lg:9">
+				Your list would go here
 			</div>
 		</div>
 
