--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -15,7 +15,7 @@
 					<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 					<li><a href="/components/buttons/">Buttons</a></li>
 					<li><a href="/components/card/">Card</a></li>
-					<li><a href="/components/filter-group/">Filter group</a></li>
+					<li><a href="/components/filters/">Filters (panel and groups)</a></li>
 					<li><a href="/components/footer/">Footer</a></li>
 					<li><a href="/components/grid/">Grid</a></li>
 					<li><a href="/components/hero/">Hero</a></li>
