--- a/src/components/tag/tag.njk
+++ b/src/components/tag/tag.njk
@@ -13,5 +13,18 @@
 
 	<{{ tagName }} class="tag {{ modifier | trim }} {{ tag.className if tag.className }}" {{ href }}>
 		{{ tag.label }}
+		{% if tag.remove %}
+			{% if tag.remove == "button" %}
+				<button type="button" class="tag__remove">
+					<span class="icon icon--remove" aria-hidden="true"></span>
+					<span class="visually-hidden">Remove {{ tag.label }}</span>
+				</button>
+			{% else %}
+				<a href="{{tag.remove}}" class="tag__remove">
+					<span class="icon icon--remove" aria-hidden="true"></span>
+					<span class="visually-hidden">Remove {{ tag.label }}</span>
+				</a>
+			{% endif %}
+		{% endif %}
 	</{{ tagName }}>
 {% endmacro %}
