--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -13,6 +13,7 @@
 'page-header/page-header',
 'panel/panel',
 'phase-banner/phase-banner',
+'results-info/results-info',
 'table/table',
 'tabs/tabs',
 'tag/tag';
