--- a/src/components/filter-panel/_filter-panel.scss
+++ b/src/components/filter-panel/_filter-panel.scss
@@ -3,70 +3,70 @@
 ////
 
 .filter-panel {
-    margin: rem(0 0 $spacing-medium 0);
-  
-    // Heading button to collapse/expand filter panel
-    &__heading {
-      @include font-size(1);
-      appearance: none;
-      background: $colour-nice-grey-2;
-      border: 0;
-      cursor: pointer;
-      display: block;
-      font-weight: bold;
-      padding: rem($spacing-small);
-      position: relative;
-      text-align: left;
-      width: 100%;
-  
-      &:after {
-        @include nice-icon(chevron-up);
-        @include font-size(-1);
-        color: $colour-icons;
-        margin-top: - rem($spacing-small);
-        position: absolute;
-        right: rem($spacing-small);
-        top: 50%;
-      }
-  
-      &[aria-expanded='false']:after {
-        content: nice-icon(chevron-down);
-      }
-  
-      &:focus {
-        @include default-focus-style;
-      }
+  margin: rem(0 0 $spacing-medium 0);
+
+  // Heading button to collapse/expand filter panel
+  &__heading {
+    @include font-size(h5);
+    appearance: none;
+    background: $colour-nice-grey-2;
+    border: 0;
+    cursor: pointer;
+    display: block;
+    font-weight: bold;
+    padding: rem($spacing-small);
+    position: relative;
+    text-align: left;
+    width: 100%;
+
+    &:after {
+      @include nice-icon(chevron-up);
+      @include font-size(-1);
+      color: $colour-icons;
+      margin-top: - rem($spacing-small);
+      position: absolute;
+      right: rem($spacing-small);
+      top: 50%;
     }
-  
-    &__body {
-      background: $colour-panel-default;
-      padding: rem($spacing-medium);
-  
-      &[aria-hidden='true'] {
+
+    &[aria-expanded='false']:after {
+      content: nice-icon(chevron-down);
+    }
+
+    &:focus {
+      @include default-focus-style;
+    }
+  }
+
+  &__body {
+    background: $colour-panel-default;
+    padding: rem($spacing-medium);
+
+    &[aria-hidden='true'] {
+      display: none;
+    }
+  }
+
+  &__submit {
+    margin: rem($spacing-medium 0 0);
+  }
+
+  @include mq($from: sm) {
+    &__heading {
+      background: none;
+      cursor: default;
+      margin-bottom: rem($spacing-medium);
+      padding: 0;
+      pointer-events: none;
+
+      &:after {
         display: none;
       }
     }
 
-    &__submit {
-        margin: rem($spacing-medium 0 0);
-    }
-  
-    @include mq($from: sm) {
-      &__heading {
-        background: none;
-        cursor: default;
-        margin-bottom: rem($spacing-small);
-        padding: 0;
-        pointer-events: none;
-
-        &:after {
-            display: none;
-        }
-      }
-  
-      &__body {
-        background: none;
-        padding: 0;
-      }
+    &__body {
+      background: none;
+      padding: 0;
     }
   }
+}
