--- a/src/components/filter-group/filter-group.njk
+++ b/src/components/filter-group/filter-group.njk
@@ -13,7 +13,7 @@
 		<div role="group" id="group-{{ filterGroup.id }}" aria-labelledby="group-title-{{ filterGroup.id }}" class="filter-group__options">
 			{% for option in filterGroup.options %}
 				<label for="filter_{{ filterGroup.id }}_{{option.id}}" class="filter-group__option">
-					<input id="filter_{{ filterGroup.id }}_{{option.id}}" type="checkbox" name="{{ filterGroup.id }}" value="{{option.id}}" {{ "checked=\"checked\"" if option.isSelected }} />
+					<input id="filter_{{ filterGroup.id }}_{{option.id}}" type="checkbox" name="{{ filterGroup.id }}" value="{{option.id}}" aria-controls="results-info-count" {{ "checked=\"checked\"" if option.isSelected }} />
 					{{option.label}}
 				</label>
 			{% endfor %}
