GW-106 Fix bug with panel title having extra chevron

--- a/src/components/results-info/results-info.njk
+++ b/src/components/results-info/results-info.njk
@@ -11,13 +11,13 @@
             <li class="results-info__filter">
                 <span class="tag tag--outline">
                     Type: Pathways
-                    <a href="#"><span class="icon icon--remove" aria-hidden="true"></span><span class="visually-hidden">Remove Type: Pathways filter</span></a>
+                    <a href="#" class="tag__remove"><span class="icon icon--remove" aria-hidden="true"></span><span class="visually-hidden">Remove Type: Pathways filter</span></a>
                 </span>
             </li>
             <li class="results-info__filter">
                 <span class="tag tag--outline">
                     Guidance programme: NICE guidelines
-                    <a href="#"><span class="icon icon--remove" aria-hidden="true"></span><span class="visually-hidden">Remove Guidance programme: NICE guidelines filter</span></a>
+                    <a href="#" class="tag__remove"><span class="icon icon--remove" aria-hidden="true"></span><span class="visually-hidden">Remove Guidance programme: NICE guidelines filter</span></a>
                 </span>
             </li>
         </ul>
