--- a/src/components/filter-panel/_filter-panel.scss
+++ b/src/components/filter-panel/_filter-panel.scss
@@ -65,8 +65,10 @@
       padding: 0;
       pointer-events: none;
 
-      &:after {
-        display: none;
+      @include when-is(button) {
+        &:after {
+          display: none;
+        }
       }
     }
 
